use Arrays.asList() to avoid copying elements